--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "encoding": "^0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.3.1",
@@ -53,6 +54,6 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.3",
-    "prisma": "^5.2.0"
+    "prisma": "^5.3.1"
   }
 }
